// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-with-no-trailing-newline.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`empty-with-no-trailing-newline.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`empty-with-trailing-newline.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================


=====================================output=====================================

================================================================================
`;

exports[`empty-with-trailing-newline.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


=====================================output=====================================

================================================================================
`;

exports[`end-of-line-last.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
a bare string to hightlight eol last handling

=====================================output=====================================
a bare string to hightlight eol last handling
================================================================================
`;

exports[`end-of-line-last.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a bare string to hightlight eol last handling

=====================================output=====================================
a bare string to hightlight eol last handling
================================================================================
`;
